// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Twitter 1 1`] = `
<Button
  big={true}
  link="http://sharingbuttons.io"
  message="I am so cool"
  solidcircle={true}
>
  <styled.a
    aria-label="Share on Twitter"
    href="https://twitter.com/intent/tweet/?text=I%20am%20so%20cool.&amp;url=http%3A%2F%2Fsharingbuttons.io"
    target="_blank"
  >
    <a
      aria-label="Share on Twitter"
      className="sc-bwzfXH bSlLDy"
      href="https://twitter.com/intent/tweet/?text=I%20am%20so%20cool.&amp;url=http%3A%2F%2Fsharingbuttons.io"
      target="_blank"
    >
      <styled.div>
        <div
          className="sc-bxivhb fWYWWZ"
        >
          <styled.div
            aria-hidden="true"
            rel="noreferrer noopener"
            solidcircle={true}
          >
            <div
              aria-hidden="true"
              className="sc-htpNat gylFwk"
              rel="noreferrer noopener"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 0C5.38 0 0 5.38 0 12s5.38 12 12 12 12-5.38 12-12S18.62 0 12 0zm5.26 9.38v.34c0 3.48-2.64 7.5-7.48 7.5-1.48 0-2.87-.44-4.03-1.2 1.37.17 2.77-.2 3.9-1.08-1.16-.02-2.13-.78-2.46-1.83.38.1.8.07 1.17-.03-1.2-.24-2.1-1.3-2.1-2.58v-.05c.35.2.75.32 1.18.33-.7-.47-1.17-1.28-1.17-2.2 0-.47.13-.92.36-1.3C7.94 8.85 9.88 9.9 12.06 10c-.04-.2-.06-.4-.06-.6 0-1.46 1.18-2.63 2.63-2.63.76 0 1.44.3 1.92.82.6-.12 1.95-.27 1.95-.27-.35.53-.72 1.66-1.24 2.04z"
                />
              </svg>
               share on 
              Twitter
               
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Button>
`;

exports[`Twitter 2 1`] = `
<Button
  link="http://sharingbuttons.io"
  medium={true}
  message="I am so cool"
  solidcircle={true}
>
  <styled.a
    aria-label="Share on Twitter"
    href="https://twitter.com/intent/tweet/?text=I%20am%20so%20cool.&amp;url=http%3A%2F%2Fsharingbuttons.io"
    target="_blank"
  >
    <a
      aria-label="Share on Twitter"
      className="sc-bwzfXH bSlLDy"
      href="https://twitter.com/intent/tweet/?text=I%20am%20so%20cool.&amp;url=http%3A%2F%2Fsharingbuttons.io"
      target="_blank"
    >
      <styled.div>
        <div
          className="sc-bxivhb fWYWWZ"
        >
          <styled.div
            aria-hidden="true"
            rel="noreferrer noopener"
            solidcircle={true}
          >
            <div
              aria-hidden="true"
              className="sc-htpNat gylFwk"
              rel="noreferrer noopener"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 0C5.38 0 0 5.38 0 12s5.38 12 12 12 12-5.38 12-12S18.62 0 12 0zm5.26 9.38v.34c0 3.48-2.64 7.5-7.48 7.5-1.48 0-2.87-.44-4.03-1.2 1.37.17 2.77-.2 3.9-1.08-1.16-.02-2.13-.78-2.46-1.83.38.1.8.07 1.17-.03-1.2-.24-2.1-1.3-2.1-2.58v-.05c.35.2.75.32 1.18.33-.7-.47-1.17-1.28-1.17-2.2 0-.47.13-.92.36-1.3C7.94 8.85 9.88 9.9 12.06 10c-.04-.2-.06-.4-.06-.6 0-1.46 1.18-2.63 2.63-2.63.76 0 1.44.3 1.92.82.6-.12 1.95-.27 1.95-.27-.35.53-.72 1.66-1.24 2.04z"
                />
              </svg>
               
              Twitter
               
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Button>
`;

exports[`Twitter 3 1`] = `
<Button
  link="http://sharingbuttons.io"
  message="I am so cool"
  small={true}
  solidcircle={true}
>
  <styled.a
    aria-label="Share on Twitter"
    href="https://twitter.com/intent/tweet/?text=I%20am%20so%20cool.&amp;url=http%3A%2F%2Fsharingbuttons.io"
    target="_blank"
  >
    <a
      aria-label="Share on Twitter"
      className="sc-bwzfXH bSlLDy"
      href="https://twitter.com/intent/tweet/?text=I%20am%20so%20cool.&amp;url=http%3A%2F%2Fsharingbuttons.io"
      target="_blank"
    >
      <styled.div
        small={true}
      >
        <div
          className="sc-bxivhb fWYWWZ"
        >
          <styled.div
            aria-hidden="true"
            rel="noreferrer noopener"
            solidcircle={true}
          >
            <div
              aria-hidden="true"
              className="sc-htpNat gylFwk"
              rel="noreferrer noopener"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 0C5.38 0 0 5.38 0 12s5.38 12 12 12 12-5.38 12-12S18.62 0 12 0zm5.26 9.38v.34c0 3.48-2.64 7.5-7.48 7.5-1.48 0-2.87-.44-4.03-1.2 1.37.17 2.77-.2 3.9-1.08-1.16-.02-2.13-.78-2.46-1.83.38.1.8.07 1.17-.03-1.2-.24-2.1-1.3-2.1-2.58v-.05c.35.2.75.32 1.18.33-.7-.47-1.17-1.28-1.17-2.2 0-.47.13-.92.36-1.3C7.94 8.85 9.88 9.9 12.06 10c-.04-.2-.06-.4-.06-.6 0-1.46 1.18-2.63 2.63-2.63.76 0 1.44.3 1.92.82.6-.12 1.95-.27 1.95-.27-.35.53-.72 1.66-1.24 2.04z"
                />
              </svg>
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Button>
`;

exports[`Twitter 4 1`] = `
<Button
  big={true}
  circle={true}
  link="http://sharingbuttons.io"
  message="I am so cool"
>
  <styled.a
    aria-label="Share on Twitter"
    href="https://twitter.com/intent/tweet/?text=I%20am%20so%20cool.&amp;url=http%3A%2F%2Fsharingbuttons.io"
    target="_blank"
  >
    <a
      aria-label="Share on Twitter"
      className="sc-bwzfXH bSlLDy"
      href="https://twitter.com/intent/tweet/?text=I%20am%20so%20cool.&amp;url=http%3A%2F%2Fsharingbuttons.io"
      target="_blank"
    >
      <styled.div>
        <div
          className="sc-bxivhb fWYWWZ"
        >
          <styled.div
            aria-hidden="true"
            rel="noreferrer noopener"
          >
            <div
              aria-hidden="true"
              className="sc-htpNat dZQCuR"
              rel="noreferrer noopener"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 0C5.38 0 0 5.38 0 12s5.38 12 12 12 12-5.38 12-12S18.62 0 12 0zm5.26 9.38v.34c0 3.48-2.64 7.5-7.48 7.5-1.48 0-2.87-.44-4.03-1.2 1.37.17 2.77-.2 3.9-1.08-1.16-.02-2.13-.78-2.46-1.83.38.1.8.07 1.17-.03-1.2-.24-2.1-1.3-2.1-2.58v-.05c.35.2.75.32 1.18.33-.7-.47-1.17-1.28-1.17-2.2 0-.47.13-.92.36-1.3C7.94 8.85 9.88 9.9 12.06 10c-.04-.2-.06-.4-.06-.6 0-1.46 1.18-2.63 2.63-2.63.76 0 1.44.3 1.92.82.6-.12 1.95-.27 1.95-.27-.35.53-.72 1.66-1.24 2.04z"
                />
              </svg>
               share on 
              Twitter
               
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Button>
`;

exports[`Twitter 5 1`] = `
<Button
  circle={true}
  link="http://sharingbuttons.io"
  medium={true}
  message="I am so cool"
>
  <styled.a
    aria-label="Share on Twitter"
    href="https://twitter.com/intent/tweet/?text=I%20am%20so%20cool.&amp;url=http%3A%2F%2Fsharingbuttons.io"
    target="_blank"
  >
    <a
      aria-label="Share on Twitter"
      className="sc-bwzfXH bSlLDy"
      href="https://twitter.com/intent/tweet/?text=I%20am%20so%20cool.&amp;url=http%3A%2F%2Fsharingbuttons.io"
      target="_blank"
    >
      <styled.div>
        <div
          className="sc-bxivhb fWYWWZ"
        >
          <styled.div
            aria-hidden="true"
            rel="noreferrer noopener"
          >
            <div
              aria-hidden="true"
              className="sc-htpNat dZQCuR"
              rel="noreferrer noopener"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 0C5.38 0 0 5.38 0 12s5.38 12 12 12 12-5.38 12-12S18.62 0 12 0zm5.26 9.38v.34c0 3.48-2.64 7.5-7.48 7.5-1.48 0-2.87-.44-4.03-1.2 1.37.17 2.77-.2 3.9-1.08-1.16-.02-2.13-.78-2.46-1.83.38.1.8.07 1.17-.03-1.2-.24-2.1-1.3-2.1-2.58v-.05c.35.2.75.32 1.18.33-.7-.47-1.17-1.28-1.17-2.2 0-.47.13-.92.36-1.3C7.94 8.85 9.88 9.9 12.06 10c-.04-.2-.06-.4-.06-.6 0-1.46 1.18-2.63 2.63-2.63.76 0 1.44.3 1.92.82.6-.12 1.95-.27 1.95-.27-.35.53-.72 1.66-1.24 2.04z"
                />
              </svg>
               
              Twitter
               
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Button>
`;

exports[`Twitter 6 1`] = `
<Button
  circle={true}
  link="http://sharingbuttons.io"
  message="I am so cool"
  small={true}
>
  <styled.a
    aria-label="Share on Twitter"
    href="https://twitter.com/intent/tweet/?text=I%20am%20so%20cool.&amp;url=http%3A%2F%2Fsharingbuttons.io"
    target="_blank"
  >
    <a
      aria-label="Share on Twitter"
      className="sc-bwzfXH bSlLDy"
      href="https://twitter.com/intent/tweet/?text=I%20am%20so%20cool.&amp;url=http%3A%2F%2Fsharingbuttons.io"
      target="_blank"
    >
      <styled.div
        small={true}
      >
        <div
          className="sc-bxivhb fWYWWZ"
        >
          <styled.div
            aria-hidden="true"
            rel="noreferrer noopener"
          >
            <div
              aria-hidden="true"
              className="sc-htpNat dZQCuR"
              rel="noreferrer noopener"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 0C5.38 0 0 5.38 0 12s5.38 12 12 12 12-5.38 12-12S18.62 0 12 0zm5.26 9.38v.34c0 3.48-2.64 7.5-7.48 7.5-1.48 0-2.87-.44-4.03-1.2 1.37.17 2.77-.2 3.9-1.08-1.16-.02-2.13-.78-2.46-1.83.38.1.8.07 1.17-.03-1.2-.24-2.1-1.3-2.1-2.58v-.05c.35.2.75.32 1.18.33-.7-.47-1.17-1.28-1.17-2.2 0-.47.13-.92.36-1.3C7.94 8.85 9.88 9.9 12.06 10c-.04-.2-.06-.4-.06-.6 0-1.46 1.18-2.63 2.63-2.63.76 0 1.44.3 1.92.82.6-.12 1.95-.27 1.95-.27-.35.53-.72 1.66-1.24 2.04z"
                />
              </svg>
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Button>
`;

exports[`Twitter 7 1`] = `
<Button
  big={true}
  link="http://sharingbuttons.io"
  message="I am so cool"
  solid={true}
>
  <styled.a
    aria-label="Share on Twitter"
    href="https://twitter.com/intent/tweet/?text=I%20am%20so%20cool.&amp;url=http%3A%2F%2Fsharingbuttons.io"
    target="_blank"
  >
    <a
      aria-label="Share on Twitter"
      className="sc-bwzfXH bSlLDy"
      href="https://twitter.com/intent/tweet/?text=I%20am%20so%20cool.&amp;url=http%3A%2F%2Fsharingbuttons.io"
      target="_blank"
    >
      <styled.div>
        <div
          className="sc-bxivhb fWYWWZ"
        >
          <styled.div
            aria-hidden="true"
            rel="noreferrer noopener"
            solid={true}
          >
            <div
              aria-hidden="true"
              className="sc-htpNat gylFwk"
              rel="noreferrer noopener"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M23.44 4.83c-.8.37-1.5.38-2.22.02.93-.56.98-.96 1.32-2.02-.88.52-1.86.9-2.9 1.1-.82-.88-2-1.43-3.3-1.43-2.5 0-4.55 2.04-4.55 4.54 0 .36.03.7.1 1.04-3.77-.2-7.12-2-9.36-4.75-.4.67-.6 1.45-.6 2.3 0 1.56.8 2.95 2 3.77-.74-.03-1.44-.23-2.05-.57v.06c0 2.2 1.56 4.03 3.64 4.44-.67.2-1.37.2-2.06.08.58 1.8 2.26 3.12 4.25 3.16C5.78 18.1 3.37 18.74 1 18.46c2 1.3 4.4 2.04 6.97 2.04 8.35 0 12.92-6.92 12.92-12.93 0-.2 0-.4-.02-.6.9-.63 1.96-1.22 2.56-2.14z"
                />
              </svg>
               share on 
              Twitter
               
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Button>
`;

exports[`Twitter 8 1`] = `
<Button
  link="http://sharingbuttons.io"
  medium={true}
  message="I am so cool"
  solid={true}
>
  <styled.a
    aria-label="Share on Twitter"
    href="https://twitter.com/intent/tweet/?text=I%20am%20so%20cool.&amp;url=http%3A%2F%2Fsharingbuttons.io"
    target="_blank"
  >
    <a
      aria-label="Share on Twitter"
      className="sc-bwzfXH bSlLDy"
      href="https://twitter.com/intent/tweet/?text=I%20am%20so%20cool.&amp;url=http%3A%2F%2Fsharingbuttons.io"
      target="_blank"
    >
      <styled.div>
        <div
          className="sc-bxivhb fWYWWZ"
        >
          <styled.div
            aria-hidden="true"
            rel="noreferrer noopener"
            solid={true}
          >
            <div
              aria-hidden="true"
              className="sc-htpNat gylFwk"
              rel="noreferrer noopener"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M23.44 4.83c-.8.37-1.5.38-2.22.02.93-.56.98-.96 1.32-2.02-.88.52-1.86.9-2.9 1.1-.82-.88-2-1.43-3.3-1.43-2.5 0-4.55 2.04-4.55 4.54 0 .36.03.7.1 1.04-3.77-.2-7.12-2-9.36-4.75-.4.67-.6 1.45-.6 2.3 0 1.56.8 2.95 2 3.77-.74-.03-1.44-.23-2.05-.57v.06c0 2.2 1.56 4.03 3.64 4.44-.67.2-1.37.2-2.06.08.58 1.8 2.26 3.12 4.25 3.16C5.78 18.1 3.37 18.74 1 18.46c2 1.3 4.4 2.04 6.97 2.04 8.35 0 12.92-6.92 12.92-12.93 0-.2 0-.4-.02-.6.9-.63 1.96-1.22 2.56-2.14z"
                />
              </svg>
               
              Twitter
               
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Button>
`;

exports[`Twitter 9 1`] = `
<Button
  link="http://sharingbuttons.io"
  message="I am so cool"
  small={true}
  solid={true}
>
  <styled.a
    aria-label="Share on Twitter"
    href="https://twitter.com/intent/tweet/?text=I%20am%20so%20cool.&amp;url=http%3A%2F%2Fsharingbuttons.io"
    target="_blank"
  >
    <a
      aria-label="Share on Twitter"
      className="sc-bwzfXH bSlLDy"
      href="https://twitter.com/intent/tweet/?text=I%20am%20so%20cool.&amp;url=http%3A%2F%2Fsharingbuttons.io"
      target="_blank"
    >
      <styled.div
        small={true}
      >
        <div
          className="sc-bxivhb fWYWWZ"
        >
          <styled.div
            aria-hidden="true"
            rel="noreferrer noopener"
            solid={true}
          >
            <div
              aria-hidden="true"
              className="sc-htpNat gylFwk"
              rel="noreferrer noopener"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M23.44 4.83c-.8.37-1.5.38-2.22.02.93-.56.98-.96 1.32-2.02-.88.52-1.86.9-2.9 1.1-.82-.88-2-1.43-3.3-1.43-2.5 0-4.55 2.04-4.55 4.54 0 .36.03.7.1 1.04-3.77-.2-7.12-2-9.36-4.75-.4.67-.6 1.45-.6 2.3 0 1.56.8 2.95 2 3.77-.74-.03-1.44-.23-2.05-.57v.06c0 2.2 1.56 4.03 3.64 4.44-.67.2-1.37.2-2.06.08.58 1.8 2.26 3.12 4.25 3.16C5.78 18.1 3.37 18.74 1 18.46c2 1.3 4.4 2.04 6.97 2.04 8.35 0 12.92-6.92 12.92-12.93 0-.2 0-.4-.02-.6.9-.63 1.96-1.22 2.56-2.14z"
                />
              </svg>
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Button>
`;

exports[`Twitter 11 1`] = `
<Button
  circle={true}
>
  <styled.a
    aria-label="Share on Twitter"
    href="https://twitter.com/intent/tweet/?text=.&amp;url="
    target="_blank"
  >
    <a
      aria-label="Share on Twitter"
      className="sc-bwzfXH bSlLDy"
      href="https://twitter.com/intent/tweet/?text=.&amp;url="
      target="_blank"
    >
      <styled.div>
        <div
          className="sc-bxivhb fWYWWZ"
        >
          <styled.div
            aria-hidden="true"
            rel="noreferrer noopener"
          >
            <div
              aria-hidden="true"
              className="sc-htpNat dZQCuR"
              rel="noreferrer noopener"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 0C5.38 0 0 5.38 0 12s5.38 12 12 12 12-5.38 12-12S18.62 0 12 0zm5.26 9.38v.34c0 3.48-2.64 7.5-7.48 7.5-1.48 0-2.87-.44-4.03-1.2 1.37.17 2.77-.2 3.9-1.08-1.16-.02-2.13-.78-2.46-1.83.38.1.8.07 1.17-.03-1.2-.24-2.1-1.3-2.1-2.58v-.05c.35.2.75.32 1.18.33-.7-.47-1.17-1.28-1.17-2.2 0-.47.13-.92.36-1.3C7.94 8.85 9.88 9.9 12.06 10c-.04-.2-.06-.4-.06-.6 0-1.46 1.18-2.63 2.63-2.63.76 0 1.44.3 1.92.82.6-.12 1.95-.27 1.95-.27-.35.53-.72 1.66-1.24 2.04z"
                />
              </svg>
               
              Twitter
               
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Button>
`;

exports[`Twitter 11 2`] = `
<Button
  solidcircle={true}
>
  <styled.a
    aria-label="Share on Twitter"
    href="https://twitter.com/intent/tweet/?text=.&amp;url="
    target="_blank"
  >
    <a
      aria-label="Share on Twitter"
      className="sc-bwzfXH bSlLDy"
      href="https://twitter.com/intent/tweet/?text=.&amp;url="
      target="_blank"
    >
      <styled.div>
        <div
          className="sc-bxivhb fWYWWZ"
        >
          <styled.div
            aria-hidden="true"
            rel="noreferrer noopener"
            solidcircle={true}
          >
            <div
              aria-hidden="true"
              className="sc-htpNat gylFwk"
              rel="noreferrer noopener"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 0C5.38 0 0 5.38 0 12s5.38 12 12 12 12-5.38 12-12S18.62 0 12 0zm5.26 9.38v.34c0 3.48-2.64 7.5-7.48 7.5-1.48 0-2.87-.44-4.03-1.2 1.37.17 2.77-.2 3.9-1.08-1.16-.02-2.13-.78-2.46-1.83.38.1.8.07 1.17-.03-1.2-.24-2.1-1.3-2.1-2.58v-.05c.35.2.75.32 1.18.33-.7-.47-1.17-1.28-1.17-2.2 0-.47.13-.92.36-1.3C7.94 8.85 9.88 9.9 12.06 10c-.04-.2-.06-.4-.06-.6 0-1.46 1.18-2.63 2.63-2.63.76 0 1.44.3 1.92.82.6-.12 1.95-.27 1.95-.27-.35.53-.72 1.66-1.24 2.04z"
                />
              </svg>
               
              Twitter
               
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Button>
`;

exports[`Twitter 12 1`] = `
<Button>
  <styled.a
    aria-label="Share on Twitter"
    href="https://twitter.com/intent/tweet/?text=.&amp;url="
    target="_blank"
  >
    <a
      aria-label="Share on Twitter"
      className="sc-bwzfXH bSlLDy"
      href="https://twitter.com/intent/tweet/?text=.&amp;url="
      target="_blank"
    >
      <styled.div>
        <div
          className="sc-bxivhb fWYWWZ"
        >
          <styled.div
            aria-hidden="true"
            rel="noreferrer noopener"
            solid={true}
          >
            <div
              aria-hidden="true"
              className="sc-htpNat gylFwk"
              rel="noreferrer noopener"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M23.44 4.83c-.8.37-1.5.38-2.22.02.93-.56.98-.96 1.32-2.02-.88.52-1.86.9-2.9 1.1-.82-.88-2-1.43-3.3-1.43-2.5 0-4.55 2.04-4.55 4.54 0 .36.03.7.1 1.04-3.77-.2-7.12-2-9.36-4.75-.4.67-.6 1.45-.6 2.3 0 1.56.8 2.95 2 3.77-.74-.03-1.44-.23-2.05-.57v.06c0 2.2 1.56 4.03 3.64 4.44-.67.2-1.37.2-2.06.08.58 1.8 2.26 3.12 4.25 3.16C5.78 18.1 3.37 18.74 1 18.46c2 1.3 4.4 2.04 6.97 2.04 8.35 0 12.92-6.92 12.92-12.93 0-.2 0-.4-.02-.6.9-.63 1.96-1.22 2.56-2.14z"
                />
              </svg>
               
              Twitter
               
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Button>
`;
